gitops/clusters/de/hetzner/cluster/apps/flux-operator-route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  namespace: flux-system
spec:
  parentRefs:
    - name: gateway
      namespace: envoy-gateway-system
      sectionName: plaintext
  hostnames:
    - "flux.tailb40090.ts.net"
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
